--- a/package.json
+++ b/package.json
@@ -11,12 +11,25 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "clean:develop": "gatsby clean && gatsby develop",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
     "gatsby": "^2.22.15",
+    "gatsby-image": "^2.4.6",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-react-helmet": "^3.3.3",
+    "gatsby-plugin-sharp": "^2.6.10",
+    "gatsby-plugin-sitemap": "^2.4.4",
+    "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-source-strapi": "0.0.12",
+    "gatsby-transformer-sharp": "^2.5.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^3.10.0",
+    "react-markdown": "^4.3.1",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
